--- a/Cerberus Internal Exploratory.tex
+++ b/Cerberus Internal Exploratory.tex
@@ -138,17 +138,15 @@ This paper explores the prospect of a basic advertising scheme nested within app
 		
 \pagebreak
 		
-	\section{Proving Candidacy for the Advertisement}
+	\section{A zk-SNARKs Implementation}
 		
 		The \textit{candidacy} component should prevent any malicious $\mathcal{P}$ from obtaining an \textsc{AdPack} whose requirements they do not meet within a negligible probability as a byway of ensuring that advertisements are served to the target demographic specified by $\mathcal{V}$. There are two alternate schemes capable of providing such a functionality that  may be implemented based, in the first case, on extending the existing zk-SNARKs scheme to include the \textsc{PoC} computation, and in the second, on constructing a secret handshake scheme recently published in the academic literature.
-		
-		\subsection{A zk-SNARKs Implementation}
 		
 			A zk-SNARKs proofing scheme following the construction provided by Jens Groth in 2016 (\textit{'On the Size of Pairing-based Non-interactive Arguments'}) enables $\mathcal{P}$ to prove the correctness of a statement for some relation $\mathcal{R}$ with a negligible probability of a malicious party convincing $\mathcal{V}$ of the correctness of such a statement for arbitrary computations. There are a collection of existing tools of varying production readiness that would enable \textsc{Omnia Protocol} to implement the zk-SNARKs scheme.
 			
 			\paragraph{Existing Libraries.} Republic Protocol\footnote{https://github.com/republicprotocol/zksnark-rs/tree/develop} and Z-Cash Hackworks\footnote{https://github.com/zkcrypto/bellman} have both provided open-source libraries realising zk-SNARKs in \texttt{rust-lang}, but note that both are currently either non-production ready or still R\&D. We have successfully implemented a bare-bones test-API for generating a verifiable \textit{Health-Rating} from a computation iterating over data collected on smart-phones using Republic's \texttt{zkSNARK-rs} library and have not explored Hackwork's \texttt{Bellman}. The 8\_Bit Comparator and Keccak-hashing features introduced in  \texttt{zkSNARK-rs} are currently facing independent issues with the former returning only a 77\% correctness on verification and the latter hanging on the generation of a \textit{quadratic arithmetic program} from a dummy representation of the circuit - \textsc{Athena} relies on both these features for candidacy.\footnote{Note that this is at the time of writing and may not be relevant or up-to-date at the time of reading.} \footnote{The \texttt{zkSNARK-rs} comparator was tested with a loop recursively proving and verifying the same inputs.}
 			
-			\subsubsection{Zero-Knowledge 8-Bit Comparator}
+			\subsection{Zero-Knowledge 8-Bit Comparator}
 		
 				Candidacy requires that $\mathcal{P}$ proves membership of a group manifesting a set of characteristics ($C_{char}$) defined by $\mathcal{V}$ as being  within a desired \textit{range}, denoted as $\mathcal{P} \in C_{char}$. The comparator is capable of proving that $\gamma > \alpha$ or $\gamma < \beta$ packaged within \texttt{zkSNARK-rs} as a \texttt{test\_program}, which provides the fundamental component for proving that $\gamma$ belongs to a range such that $\alpha < \gamma < \beta$. The library provides a circuit for constructing the \textsc{qap} required for a single 8-bit comparator parsed in the \texttt{.zk} program, but this does not extend to a range, which inherently requires at least two-comparators. Moreover, membership of a target group would, in most instances, require $\mathcal{P}$ to prove that they possess characteristics nested within multiple distinct ranges. Currently, the comparator must be extended for \textsc{Athena} to prove that $\mathcal{P}$ knows \textit{many smaller} weights, such that when computations determining characteristics from the individual data-set are executed and collated, $\mathcal{P} \in C_{char}$.
 				
@@ -158,13 +156,15 @@ This paper explores the prospect of a basic advertising scheme nested within app
 					
 					The \texttt{.zk}-based comparator is currently limited to a pseudo-logic-gate instantiation that operates over a bit-representation of some unsigned number, and cannot be efficiently wrapped into a more complex algorithm that satsifies the 'many smaller weights' requirements. $\mathcal{P}$ may circumnavigate this through running a parallel computation prior to the \texttt{zk-SNARK} generation responsible for deriving the outcome of the \textsc{orb} (i.e. determining a health-outcome) which is then fed intothe \texttt{.zk} program alongside the smaller weights, effectively wrapping two separate \texttt{zk-code} programs within the one to minimise verifier complexity.
 					
-			\subsubsection{Zero-Knowledge SHA-3 Hashing}
+			\subsection{Zero-Knowledge SHA-3 Hashing}
 			
 				Republic protocol has implemented a \texttt{zk-hashing} functionality within \texttt{zkSNARK-rs} that extends Groth16 and enables $\mathcal{P}$ to publicly prove that a SHA-3 digest has been correctly composed from an unknown input. The hashing enables $\mathcal{P}$ to construct a proof of knowledge for any digestable value, that is, for any variable or state that can be passed into \texttt{zkSNARK-rs} as a referenced slice (\&[u8]). \textsc{Athena} leverages the hashing functionality to facilitate the \textsc{PoE} by requiring that $\mathcal{V}$ encode the \textsc{AdPack} with a secret which $\mathcal{P}$ must then hash and append a \texttt{zk-SNARK} proof of correctness as evidence that the device had processed the advertisement. $\mathcal{V}$ verifies the \textsc{PoE} by requiring that $\mathcal{P}$ provides a digest matching a SHA-3 hash of the \textsc{AdPack}, and defends against $\mathcal{A}$ simply providing a matching digest through the \texttt{zk-SNARK} proof of computation. Security is achieved in the incentives model rather than in a cryptographic framework.
 						
-				\paragraph{Library Status.} The test implemented in lib.rs of the "0797ad7" git-commit currently consistently returns an incorrect 'true' bool from the \texttt{groth16::verify()} function from any $\mathcal{QAP}$ derived from \texttt{DummyRep::from(CircuitInstance)}. Moreover, constructing the $\mathcal{QAP}$ from a \texttt{DummyRep} required for the \textit{Keccak} instantiation causes the program to hang for an incredible amount of time.
+				\paragraph{Library Status.} The test implemented in lib.rs of the "0797ad7" git-commit currently consistently returns an incorrect 'true' bool from the \texttt{groth16::verify()} function from any $\mathcal{QAP}$ derived from \texttt{DummyRep::from(CircuitInstance)}. Moreover, constructing the $\mathcal{QAP}$ from a \texttt{DummyRep} required for the \textit{Keccak} instantiation causes the program to hang for an incredible amount of time. This is probably solvable with an appropriate $\mathcal{CRS}$ read from local storage.
 			
-			\subsubsection{Data Authenticity}
+			\subsection{Data Authenticity}
+			
+				The inability to enforce data-authenticity in a meaningful way is a significant limitation of the \textsc{omnia protocol} that is partially resolvable with the assistance of AD-SNARKs, an implementation of zk-SNARKs with an additional 'authenticated data' layer which efficiently embeds multiple signature schemes for user-devices (i.e. a fit-bit or Apple Watch) within the proof object. This will be explored separately as a core extension of the protocol.
 					
 
 				
